# agens-web

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Makefile  README.md  demo_full_flow.py  demo_full_flow_log.jsonl  demo_report.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  test_chat_agent_journeys.py  test_settings_flow.py  zip_agens.py
.claude/workflows/: code-audit-ai-novel.js
.github/workflows/: ci.yml
.venv311/: pyvenv.cfg
.venv311/Scripts/: activate  activate.bat  garden  jsondiff  jsonpatch  jsonpointer
.workbuddy/memory/: 2026-06-12.md  MEMORY.md
config/: default.yaml
demos/full_flow/: demo_full_flow.py
demos/validation/: auto_validate_v040.jsonl  auto_validate_v040.py
docs/: AGENT_OPERATION_RULES.md  ARCHITECTURE.md  ARCHITECTURE_DIAGRAM.md  CONTINUATION_PROMPT.md  INDEX.md  LESSONS_LEARNED_2026-06-17.md  OPEN_ISSUES_STATUS_2026-06-17.md  PRD_v1.md  PROJECT_AUDIT.md  PROJECT_RETRO_2026-06-17.md  README.md  RUNTIME_FLOW.md  WEB_ITERATION_PLAN.md  ZIP_TRANSFER.md  agents.md  android_crash_issue_record.md  android_prototype_implementation_report.md  class-diagram.mermaid  codex_team_prompt.md  problem.md  problem_fix_suggestions.md  security.md  sequence-diagram.mermaid  ui_test_report_2026-06-13.md  validation_report_v0.4.0.md  writer_agent.md
docs/archive/: codex_team_prompt.md  ui_test_report_2026-06-13.md
docs/prototypes/: README.md  index.html  prototype.css
mobile/: __init__.py  audio_manager.py  buildozer.spec  main.py  requirements.txt  theme.py
mobile/.buildozer/: state.db
mobile/screens/: __init__.py  character_create_screen.py  combat_screen.py  death_screen.py  game_screen.py  home_screen.py  save_screen.py  settings_popup.py  settings_screen.py  tutorial_screen.py
mobile/scripts/: sync_and_build.sh
mobile/service/: __init__.py  engine_adapter.py  model_presets.py  save_manager_compat.py  settings_store.py
mobile/widgets/: __init__.py  action_bar.py  combat_bar.py  loading_overlay.py  narrative_view.py  realm_card.py  status_bar.py
runtime/saves/: autosave.json
scripts/: run_with_key.ps1
src/agens_novel/: ARCHITECTURE.md  __init__.py  __main__.py  bgm.py  cli.py  logging_setup.py  paths.py  settings.py
tests/: conftest.py  test_play_simulation.py
tests/agents/: test_orchestrator.py  test_writer.py
tests/destructive/: test_apply_delta_fuzz.py  test_destructive.py  test_e2e_destructive.py
tests/e2e/: test_play_simulation.py
tests/integration/: test_e2e_real_llm.py
tests/mobile/: test_buildozer_spec.py  test_mobile_settings_store.py  test_mobile_startup.py  test_ui_source_contract.py
tests/unit/: test_audio_manager.py  test_bgm.py  test_character_create.py  test_combat.py  test_constants.py  test_destructive.py  test_e2e_destructive.py  test_engine_render.py  test_game_engine.py  test_game_schema.py  test_game_session.py  (+20 more)
web/: __init__.py
(+126 files in other folders)
