[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agens-novel"
version = "0.4.0"
description = "AI 驱动的文字修仙模拟器 — 互动叙事 + 多 Agent 回合制"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "agens-novel authors" }]

dependencies = [
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-xdist>=3.5.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]
[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: cross-module integration tests (may need network or fixtures)",
    "destructive: destructive/fuzz-style tests",
    "e2e: end-to-end scenarios (may be slow/flaky)",
    "mobile: tests that exercise Kivy/mobile-specific code",
    "llm_real: tests that call real LLM APIs (require AGNES_API_KEY)",
]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "-p no:cacheprovider",
    "-n",
    "auto",
]
filterwarnings = [
    "ignore::DeprecationWarning:kivy.*",
    "ignore::DeprecationWarning:jinja2.*",
]
